# AgentDevLabs

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  agenticlab_structure.txt  docker-compose.yml  package-lock.json  package.json  rajos.db  testrouting_gpt40.py
api/: alembic.ini  costs.py  deps.py  main.py  requirements.txt
api/config/: __init__.py  model_registry.py  pricing_default.json  router.py
api/db/: models.py  router_runs_repo.py  session.py
api/governance/: alri.py
api/models/: __init__.py  tenant.py
api/providers/: __init__.py  anthropic_adapter.py  gemini_adapter.py  openai_adapter.py
api/router/: complexity.py  routing_rules.py  rule_based.py
api/routes/: __init__.py  logs.py  (+1 more)
backend/: __init__.py  cache.py  config.py  cost.py  db.py  main.py  models.py  pricing.py  pytest02.txt  pytest03.txt  pytest04.txt  pytestresult.txt  rajos.db  schemas.py  uvicorn.txt
infra/: docker-compose.yml
lattice/: __init__.py  api.py  cache.py  cloud.py  config.py  cost.py  errors.py  logging.py  metrics.py  pii.py  rate_limit.py  schemas.py  service.py  uvicorn.txt
sdk-python/: LICENSE  README.md  pyproject.toml  sdkerror.txt  testscript.py
sdk-python/lattice_sdk/: __init__.py  client.py
sdk-python/rajos/: __init__.py  bands.py  client.py  config.py  cost.py  decorators.py
sdk-python/rajos.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdk-python/tests/: test_bands.py  test_client.py  test_cost.py  test_decorators.py  test_trace_span.py
ui/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.js  tsconfig.json
(+84 files in other folders)
