[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lattice-sdk"
version = "0.3.0"
description = "Lattice Dev Edition Python client for /v1/complete"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "AgentDevLabs" }]
dependencies = [
  "httpx>=0.27",
]

[project.urls]
homepage = "https://github.com/AgentDevLabs/lattice"
repository = "https://github.com/AgentDevLabs/lattice"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"lattice_sdk" = []
